# spipolate

./: .appveyor.yml  .travis.yml  LICENSE  spipolate.ado  spipolate.sthlp
natural_neighbor/: CMakeLists.txt  natural_neighbor.cpp
